--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "default_icon": {
 
     },
-    "default_popup": "popup.html"
+    "default_popup": "pinpad.html"
   },
   "options_page": "options.html",
   "manifest_version": 2
