--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "TabLock",
   "version": "1.0",
   "description": "Temporarily lock tabs for privacy",
-  "permissions": ["tabs", "history"],
+  "permissions": ["tabs", "history", "storage"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
