--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,10 @@
   },
   "browser_action": {
     "default_icon": {
-
+      "16": "favicon.png",
+      "32": "favicon.png",
+      "48": "favicon.png",
+      "128": "favicon.png"
     },
     "default_popup": "instance.html"
   },
